# SALS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
executables/: CMakeLists.txt
executables/bme/bme_api/: bme68x_API.c
executables/class-a/: CMakeLists.txt  bme-config.h  class_a.c  codec.js  config.h  lora-config.h
executables/class-c/: CMakeLists.txt  class-c.c  class_c.c  config.h
executables/forced-mode/: CMakeLists.txt  forced_mode.c
executables/gateway/: CMakeLists.txt  gateway.c  lora-config.h
executables/hello-abp/: CMakeLists.txt  hello_abp.c
executables/lib/: CMakeLists.txt
executables/lib/bme/: CMakeLists.txt
executables/lib/bme/bme_api/: CMakeLists.txt  bme68x_API.c  bme68x_API.h
executables/lib/bme/bsec/: CMakeLists.txt
executables/lib/bme/bsec2.0/: CMakeLists.txt
executables/lib/bme/bsec2.4/: CMakeLists.txt
executables/lib/bme/bsec2_0/: CMakeLists.txt
executables/lib/bme/bsec2_4/: CMakeLists.txt
executables/parallel-mode/: CMakeLists.txt  parallel_mode.c
executables/sensing/: CMakeLists.txt  bme-config.h  hw_config.c  sensing.c
src/: lorawan.c
src/boards/rp2040/: gpio-board.c  sx126x-board.c
src/include/pico/: lorawan.h
